# w3modmanager

./: .gitattributes  .gitignore  .taplo.toml  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  tasks.py  w3modmanager.spec
mockdata/mods/mod-direct/: readme.txt
mockdata/mods/mod-with-dlc/: readme.txt
mockdata/mods/mod-with-dlc-same-name/: readme.txt
mockdata/mods/mod-with-inputs/: input.settings.part.txt  readme.txt
mockdata/mods/mod-with-inputs-readme/: input.settings.readme.txt  readme.txt
mockdata/mods/mod-with-split-bins/: readme.txt
mockdata/mods/mod-without-dlc/: readme.txt
mockdata/mods/only-dlc/: readme.txt
mockdata/mods/patch/: readme.txt
mockdata/mods/valid/: readme.txt
mockdata/mods/valid/MODTestmod/: inputsettings.txt  validuser.settings.part.txt
mockdata/mods/valid/mods/modTestmodExtra/: inputxml.txt
mockdata/mods/weird/: readme.txt
resources/tools/quickbms/: witcher3.bms
tests/: framework.py  test_mod_detection.py  test_mod_extraction.py
w3modmanager/: __init__.py  __main__.py
w3modmanager/core/: errors.py  model.py
w3modmanager/domain/mod/: fetcher.py  mod.py
w3modmanager/domain/system/: permissions.py
w3modmanager/domain/web/: nexus.py
w3modmanager/ui/graphical/: detailswindow.py  downloadwindow.py  flowlayout.py  mainwidget.py  mainwindow.py  modlist.py  modlistmodel.py  settingswindow.py
w3modmanager/util/: util.py
